<?xml version="1.0"?>
<package format="2">

  <name>ros_system_monitor</name>

  <version>0.1.1</version>

  <description>
    System monitoring tools for ROS
  </description>

  <author>Ralf Kaestner</author>
  <author>Jerome Maye</author>

  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>

  <license>GNU Lesser General Public License (LGPL)</license>

  <url>http://github.com/ethz-asl/ros-system-monitor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <run_depend>sysstat</run_depend>
  <run_depend>hddtemp</run_depend>
  <run_depend>ntpdate</run_depend>
  <run_depend>ifstat</run_depend>

  <export/>

</package>
